Project Name Changed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 
   <div class="container">
     <aside class="sidebar">
-      <div class="brand">SQLGPT</div>
+      <div class="brand">SQL-GPT</div>
       <button class="new-chat" onclick="newChat()">+ New Chat</button>
       <div id="tabs"></div>
       <div class="sidebar-footer">
